--- a/style_fmale.css
+++ b/style_fmale.css
@@ -1,3 +1,13 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.main {
+    background-color: white;
+
+}
+
 .top_fmale img {
     width: 100%;
     height: 750px;
@@ -8,28 +18,21 @@
 .box {
     float: left;
     text-align: center;
-    padding-bottom: 20px;
-    width: 25%;
-    height: 550px;
-    border: 0.5px solid black;
-    /* margin:1px; */
-}
 
-.img {
-    height: 450px;
-    width: 100%;
+    width: 25%;
+    border: 0.5px solid black;
+
+    /* THÊM */
+    height: 500px;
 }
 
 .img img {
     width: 100%;
-    height: 100%;
+    height: 450px;
     object-fit: cover;
 }
 
 .p_name {
-    width: 100%;
-
-    padding-top: 20px;
     font-size: 14px;
     font-family: Monospace;
 }
